--- a/package.json
+++ b/package.json
@@ -29,5 +29,8 @@
     "rollup-plugin-screeps": "^1.0.1",
     "rollup-plugin-typescript2": "^0.32.1",
     "typescript": "^4.7.4"
+  },
+  "dependencies": {
+    "connected-components": "^1.0.0"
   }
 }
